Courses/202502/ingress_elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: elastic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      name: elasticpod
      labels:
        app: elastic
    spec:
      containers:
        - name: elasticimage
          image: elasticsearch:7.17.7
---
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
spec:
  type: ClusterIP
  selector:
    app: elastic
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /elastic(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: elastic-service
                port:
                  number: 9200
